CHANGE: Systray4j removed: system tray support now from SWT built-in code [Gudy]
CHANGE: Config/pref/torrent file saving uses intermediate .saving file for more reliability [Nolar]
CHANGE: New SHA-1 hasher: up to 25% faster [Gudy / Nolar]
CHANGE: Currently-connected peer connections are dropped when IPFilter is enabled [Nolar]

BUGFIX: Multiple shares of same resources causing problems (e.g. share contents+share contents recursive of same dir) [Parg]
BUGFIX: Fix for some discarded data due to occasional duplicate request [Nolar]
BUGFIX: Fix for underlying socket handles not closing under linux ("Too many open files") [Nolar]
BUGFIX: First Priority rules based on time now work across sessions [TuxPaper]
BUGFIX: Freeze on exit under OSX [Gudy]
BUGFIX: Tracker status column sortable [TuxPaper]
BUGFIX: Fix for system clock changes stalling downloads: Bug #918193 [Nolar]
BUGFIX: Individual file priorities remembered after Stop [Nolar]



16.03.04 | Azureus 2.0.8.4

CHANGE: WebUI plugin included in mainline (see http://azureus.sf.net/CVS/web.interface.howto.htm)
CHANGE: Much more reliable SF mirror auto-update handling [Nolar]

BUGFIX: Fix for loading .torrent files via web-browser/shell/doubleclick/etc [Nolar]



15.03.04 | Azureus 2.0.8.2

FEATURE: Show last time IPFilter list was updated in status area [Parg]
FEATURE: Support for "compact" tracker announce protocol [Parg]
FEATURE: Support for "key" tracker announce protocol [Parg]
FEATURE: Download Speed column in "My Torrents" turns red if below speed set in Queue config. [TuxPaper]
FEATURE: Webplugin swing ui has status area with total ul/dl [Parg]
FEATURE: XML over HTTP remote plugin interface (initially to support GTS) - mail parg@users.sf.net for details [Parg]

CHANGE: All config/pref files utilize .bak backup files [Parg]
CHANGE: Option to limit outstanding disk writes and piece hash checks [Parg]
CHANGE: Can delete shares in QUEUED state [Parg]

BUGFIX: Fix of startup issues under Win95/98/Me [TuxPaper]